--- a/style.css
+++ b/style.css
@@ -5,17 +5,25 @@
 body{
     background-color: black;
 }
+#flex-box{
+    display: flex;
+   
+    justify-content: space-between ;
+}
 table{
     /* border: solid 1px black; */
     width: 300px;
     height: 300px;
+    color: white;
+    border: solid 1px rgb(255, 255, 255);
+    text-align: center;
     border-collapse: collapse;
 }
 td{
-    border: solid 1px rgb(255, 255, 255);
+    border: 1px solid beige;
+    font-size: 30px;
+}
+#main td{
     width: 33.33%;
     height: 33.33%;
-    text-align: center;
-    font-size: 30px;
-    color: white;
 }
